fix: remove broken css rule

--- a/src/style.css
+++ b/src/style.css
@@ -12,15 +12,3 @@
 #observablehq-footer {
   max-width: none;
 }
-
-.govuk-footer__copyright-logo {
-    display: inline-block;
-    min-width: 125px;
-    padding-top: 112px;
-    background-image: url('govuk-crest.png');
-    background-repeat: no-repeat;
-    background-position: 50% 0;
-    background-size: 125px 102px;
-    text-align: center;
-    white-space: nowrap;
-}
